# fast-task-schedule

./: README.md  pyproject.toml  setup.py
.pytest_cache/v/cache/: nodeids
fast_task_schedule/: __init__.py  core.py
tests/: test_fast_task_schedule.py
